# todo_app

./: .travis.yml  CMakeLists.txt  README.md
doc/html/: _all_entries_dialog_8cpp.html  _all_entries_dialog_8h.html  _all_entries_dialog_8h_source.html  _calendar_cell_8cpp.html  _calendar_cell_8h.html  _calendar_cell_8h_source.html  _entry_8h.html  _entry_8h_source.html  _entry_dialog_8cpp.html  _entry_dialog_8h.html  _entry_dialog_8h_source.html  _login_8cpp.html  _login_8h.html  _login_8h_source.html  _planner_application_8cpp.html  _planner_application_8h.html  _planner_application_8h_source.html  _planner_calendar_8cpp.html  _planner_calendar_8h.html  _planner_calendar_8h_source.html  _serialize_helper_8h.html  _serialize_helper_8h.js  _serialize_helper_8h_source.html  _serializer_helper_8cpp.html  _serializer_helper_8cpp.js  _session_8cpp.html  _session_8h.html  _session_8h.js  _session_8h_source.html  _time_suggestions_8cpp.html  _time_suggestions_8h.html  _time_suggestions_8h_source.html  _user_account_8cpp.html  _user_account_8h.html  _user_account_8h.js  _user_account_8h_source.html  annotated.html  annotated_dup.js  (+52 more)
src/: AllEntriesDialog.cpp  AllEntriesDialog.h  CalendarCell.cpp  CalendarCell.h  Entry.h  EntryDialog.cpp  EntryDialog.h  Login.cpp  Login.h  PlannerApplication.cpp  PlannerApplication.h  PlannerCalendar.cpp  PlannerCalendar.h  SerializeHelper.h  SerializerHelper.cpp  Session.cpp  Session.h  TimeSuggestions.cpp  TimeSuggestions.h  UserAccount.cpp  UserAccount.h  planner.cpp  planner.css  planner.xml
test/: CMakeLists.txt  unitTest.cpp
(+54 files in other folders)
